<resources>
    <string name="app_name">PayWell Services</string>
    <string name="rid">RID:&#160;</string>
    <string name="tk">&#160;Tk.</string>
    <string name="home_topup">Topup</string>
    <string name="home_topup_offer_title">Bundle &amp; Pack</string>
    <string name="home_utility">Utility</string>
    <string name="home_fee">Fee</string>
    <string name="home_eticket">eTicket</string>
    <string name="home_mfs">Mobile Banking</string>
    <string name="home_mfs_fav">Mobile Banking</string>
    <string name="nav_mfs">Mobile Banking</string>
    <string name="home_product_catalog">Product Catalog</string>
    <string name="nav_product_catalog">Product Catalog</string>
    <string name="nav_check_balance">Check Balance</string>
    <string name="nav_terms_and_conditions">Terms &amp; Conditions</string>
    <string name="nav_terms_and_conditions_title">Terms and Conditions</string>
    <string name="nav_policy_statement">Privacy Statement</string>
    <string name="nav_about">About</string>
    <string name="nav_more_title">More&#8230;</string>
    <string name="home_statement">Statement</string>
    <string name="home_refill_balance">Refill Balance</string>
    <string name="home_refill_balance_title">Refill Balance</string>
    <string name="home_settings">Settings</string>
    <string name="home_statement_mini">Mini Statement</string>
    <string name="home_statement_balance">Balance Statement</string>
    <string name="home_statement_sales">Sales Statement</string>
    <string name="home_statement_transaction">Transaction Statement</string>
    <string name="home_nagad_balance_title">Refill Balance By Nagad</string>
    <string name="home_topup_trx_log">Trx. Log</string>
    <string name="home_utility_pollibiddut">Polli Biddut</string>
    <string name="home_utility_pollibiddut_registion">Polli Biddut\nReg.</string>
    <string name="home_utility_pollibiddut_bill_pay_favorite">Polli Biddut\nBill Pay</string>
    <string name="home_utility_ivac">IVAC</string>
    <string name="home_product_ekshop">Ekshop</string>
    <string name="home_utility_banglalion">Banglalion</string>
    <string name="home_utility_karnaphuli">Karnaphuli</string>
    <string name="home_utility_karnaphuli_bill_pay">Karnaphuli \nBill Pay</string>
    <string name="home_utility_karnaphuli_inquiry">Karnaphuli \nInquiry</string>
    <string name="home_utility_pb_reg">Registration</string>
    <string name="home_utility_pb_billpay">Bill Pay</string>
    <string name="home_utility_pb_billpay_title">Polli Biddut Bill Pay</string>
    <string name="home_utility_pb_reg_statu_inquery_title">Polli Biddut Bill Status Inquiry</string>
    <string name="home_utility_pb_reg_inq">Registration\nInquiry</string>
    <string name="home_utility_pb_reg_title">Polli Biddut Registration</string>
    <string name="home_utility_pollibiddut_reg_inquiry">Polli Biddut\nRegistration\nInquiry</string>
    <string name="home_utility_pollibiddut_bill_inquiry">Polli Biddut\nBill Inquiry</string>
    <string name="home_utility_pb_bill_change_number">Polli Biddut\nNumber Change</string>
    <string name="home_utility_pb_bill_ing">Bill Pay\nInquiry</string>
    <string name="home_utility_pb_phone_number_inquiry">Polli Biddut \nNumber Change \nInquiry</string>
    <string name="home_utility_pb_request_inquiry">Polli Biddut\nBill Status</string>
    <string name="home_utility_pb_bill_statu_inquery">Polli Biddut\n Bill Status \nInquiry</string>
    <string name="home_utility_qubee_inq_title">Recharge Inquiry</string>
    <string name="home_utility_ivac_fee_pay">Fee Pay</string>
    <string name="home_utility_ivac_free_pay_favorite">IVAC \nFee Pay</string>
    <string name="home_utility_ivac_inquiry">IVAC \nInquiry</string>
    <string name="home_payment_bkash">Payments\nFrom bKash</string>
    <string name="home_bkash_payment_confirm">Payment\nConfirm</string>
    <string name="home_bkash_payment_confirm_title">Payment Confirmation</string>
    <string name="home_bkash_bank_trns_req">Bank\nTransfer</string>
    <string name="home_bkash_bank_trns_req_title">Bank Transfer</string>
    <string name="home_bkash_cash_req">For Cash</string>
    <string name="home_bkash_cash_req_title">For Cash</string>
    <string name="home_eticket_bus">Bus Ticket</string>
    <string name="home_eticket_air">Air Ticket</string>
    <string name="home_product_ajker_deal">Ajker Deal</string>
    <string name="home_product_pw_wholesale">PayWell\nWholesale</string>
    <string name="home_settings_change_pin">Change PIN</string>
    <string name="home_settings_upgrade">Upgrade</string>
    <string name="home_settings_change_language">Change\nLanguage</string>
    <string name="home_refill_sda_info">SDA\nInformation</string>
    <string name="home_refill_bank">Bank Deposit</string>
    <string name="home_refill_card">Card</string>
    <string name="home_bank_brac">BRAC Bank</string>
    <string name="home_bank_dbbl">Dutch Bangla\nBank</string>
    <string name="home_bank_ibbl">Islami Bank\nBangladesh Ltd</string>
    <string name="home_bank_pbl">Pubali Bank\nLimited</string>
    <string name="home_bank_scb">Standard\nChartered Bank</string>
    <string name="home_bank_city">City Bank</string>
    <string name="home_mfs_mycash">MYCash</string>
    <string name="home_fund_management">Fund\nManage</string>
    <string name="home_fund_management_title">Fund Manage</string>
    <string name="home_cash_in_out">Cash In\nOut</string>
    <string name="home_cash_in_out_title">Cash In/Out</string>
    <string name="home_mycash_balance">MYCash\nBalance</string>
    <string name="home_mycash_balance_title">MYCash Balance</string>
    <string name="home_customer_registration">Customer\nRegistration</string>
    <string name="home_customer_registration_title">Customer Registration</string>
    <string name="home_generate_otp">Generate\nOTP</string>
    <string name="home_generate_otp_title">Generate OTP</string>
    <string name="home_mycash_change_pin">Change\nMYCash PIN</string>
    <string name="home_mycash_change_pin_title">Change MYCash PIN</string>
    <string name="home_inquiry">Inquiry</string>
    <string name="home_paywell_to_mycash">PayWell To\nMYCash</string>
    <string name="home_paywell_to_mycash_title">PayWell To MYCash</string>
    <string name="home_mycash_to_paywell">MYCash To\nPayWell</string>
    <string name="home_mycash_to_paywell_title">MYCash To PayWell</string>
    <string name="home_cash_in">Cash In</string>
    <string name="home_cash_out">Cash Out</string>
    <string name="home_activity_log">Activity Log</string>
    <string name="home_notification">Notification</string>
    <string name="home_notification_details">Details</string>
    <string name="home_notification_img_view">Image View</string>
    <string name="home_scan">Scan</string>
    <string name="home_utility_desco">DESCO</string>
    <string name="home_utility_desco_pay">Desco \nBill Pay</string>
    <string name="home_utility_desco_pay_inquiry">Desco \nBill Inquiry</string>
    <string name="home_utility_desco_pay_title">Desco Bill Pay</string>
    <string name="home_utility_desco_inquary_title">Desco Bill Inquiry</string>
    <string name="home_utility_desco_prepaid_title">Desco prepaid Bill Pay</string>
    <string name="home_utility_desco_prepaid_inquiry">Desco prepaid \nBill Inquiry</string>
    <string name="home_utility_dpdc">DPDC</string>
    <string name="home_utility_dpdc_bill_title">DPDC Bill Pay</string>
    <string name="home_utility_dpdc_inquary_title">DPDC Bill Inquiry</string>
    <string name="home_utility_dpdc_bill_pay_inquiry">DPDC Bill Inquiry</string>
    <string name="home_utility_wasa">WASA</string>
    <string name="home_utility_wasa_pay">WASA-Pay</string>
    <string name="home_utility_wasa_inquiry">WASA Bill Inquiry</string>
    <string name="home_utility_west_zone">West Zone</string>
    <string name="home_utility_west_zone_pay">West Zone\nPay</string>
    <string name="home_utility_west_zone_pay_inquiry">West Zone\nBill Inquiry</string>
    <string name="home_scan_qr_code">PayWell RID</string>
    <string name="home_settings_help">Help</string>
    <string name="home_utility_polli_biddut_bill_pay">Polli Biddut\nBill Pay</string>
    <string name="home_utility_polli_request_mobile_number_change_title">Polli Biddut Number Change</string>
    <string name="home_utility_polli_home_bill_status">Polli Biddut Bill Status</string>
    <string name="home_utility_dpdc_bill_pay">DPDC\nBill Pay</string>
    <string name="home_all_service">All\nServices</string>
    <string name="home_utility_postpaid_bill_pay">Postpaid\nBill Pay</string>
    <string name="home_utility_postpaid_bill_inq">Postpaid\nBill Inquiry</string>
    <string name="home_utility_banglalion_recharge">Banglalion\nRecharge</string>
    <string name="home_utility_banglalion_recharge_inquiry">Banglalion\nInquiry</string>
    <string name="home_utility_banglalion_recharge_title">Banglalion Recharge</string>
    <string name="banglalion_acc_no">Customer ID/Customer Number/MSISDN</string>
    <string name="home_gp">GP</string>
    <string name="home_skitto">Skitto</string>
    <string name="home_bl">Banglalink</string>
    <string name="home_at">Airtel</string>
    <string name="home_rb">Robi</string>
    <string name="home_tt">TeleTalk</string>
    <string name="exit">Press again to exit PayWell Services</string>
    <string name="no_update_msg">No update available</string>
    <string name="no_notification_msg">No new notification</string>
    <string name="version_upgrade">Version Upgrade</string>
    <string name="upgrade_msg">There is a new version available.
        Please upgrade immediately.</string>
    <string name="conn_timeout_msg">Connection time out, please try again!</string>
    <string name="try_again_msg">Please try again!</string>
    <string name="try_again_correct_msg">Please try again correctly!</string>
    <string name="connection_error_msg">Unable to connect to the Internet, please try again</string>
    <string name="phone_no_title_msg">Phone Number:</string>
    <string name="phone_no_error_msg">Enter valid phone number</string>
    <string name="amount_error_msg">Enter at least 1 digit</string>
    <string name="pin_no_error_msg">Enter PIN number</string>
    <string name="pb_acc_error_msg">Enter at least 8 digits</string>
    <string name="pb_acc_mismatch_error_msg">Account number do not match</string>
    <string name="pb_full_name_error_msg">Enter full name</string>
    <string name="banglalion_acc_error_msg">Enter at least 4 digits</string>
    <string name="old_pin_error_msg">Enter old pin</string>
    <string name="new_pin_error_msg">Enter correct new pin</string>
    <string name="bill_no_error_msg">Enter bill number</string>
    <string name="fares_information">Fare Information</string>
    <string name="ok">OK</string>
    <string name="passenger_type">Passenger type *</string>
    <string name="airline_code">Airlines code: </string>
    <string name="flight_number">Flight number: </string>
    <string name="booking_class">Booking Class: </string>
    <string name="cabin_class">Cabin class :</string>
    <string name="operating_carrier">Operating carrier: </string>
    <string name="base_fare">Base Fare</string>
    <string name="tax">Tax</string>
    <string name="currency">Currency</string>
    <string name="othercharges">Other Charges</string>
    <string name="discount">Discount</string>
    <string name="passenger_count">Passenger Count</string>
    <string name="service_fee">Service Fee</string>
    <string name="flight_information">Flight Information</string>
    <string name="cencel">Cancel</string>
    <string name="logout_text">Logout</string>
    <string name="type_of_identy">Type of ID</string>
    <string name="helth_birth_certificate">Birth registration 18+</string>
    <string name="passport">Passport</string>
    <string name="nid_paper">National ID Card</string>
</resources>